# generic-orphans

./: generics-orphans.cabal
src/GHC/Generics/: Instances.hs
src/GHC/Generics/Instances/: TH.hs
